--- a/src/languages/he_variants.json
+++ b/src/languages/he_variants.json
@@ -1,10 +1,8 @@
 {
   "counselor-male": [
-    "מדריך",
     "יועץ"
   ],
   "counselor-female": [
-    "מדריכה",
     "יועצת"
   ],
   "driver-male": [
@@ -20,22 +18,20 @@
     "מעצבת"
   ],
   "salesperson-male": [
-    "מוכר",
-    "איש מכירות"
+    "איש מכירות",
+    "איש המכירות"
   ],
   "salesperson-female": [
-    "מוכרת",
-    "אשת מכירות"
+    "אשת מכירות",
+    "אשת המכירות"
   ],
   "writer-male": [
-    "סופר",
-    "כותב",
-    "כתב"
+    "כתב",
+    "סופר"
   ],
   "writer-female": [
     "כתבת",
-    "סופרת",
-    "כותבת"
+    "סופרת"
   ],
   "developer-male": [
     "מפתח"
@@ -49,27 +45,25 @@
     "איכר"
   ],
   "farmer-female": [
+    "חוואית",
     "חקלאית",
-    "איכרה",
-    "חוואית"
+    "איכרה"
   ],
   "guard-male": [
-    "סוהר",
-    "מאבטח",
     "שומר"
   ],
   "guard-female": [
-    "סוהרת",
-    "מאבטחת",
     "שומרת"
   ],
   "hairdresser-male": [
+    "ספר",
     "מעצב שיער",
-    "ספר"
+    "מעצב השיער"
   ],
   "hairdresser-female": [
     "ספרית",
-    "מעצבת שיער"
+    "מעצבת שיער",
+    "מעצבת השיער"
   ],
   "physician-male": [
     "רופא"
@@ -90,14 +84,10 @@
     "מנקה"
   ],
   "janitor-male": [
-    "שרת",
-    "מנקה",
-    "אב בית"
+    "שרת"
   ],
   "janitor-female": [
-    "אם בית",
-    "שרתית",
-    "מנקה"
+    "שרתית"
   ],
   "carpenter-male": [
     "נגר"
@@ -118,21 +108,15 @@
     "רואת חשבון"
   ],
   "baker-male": [
-    "אופה",
-    "קונדיטור"
+    "אופה"
   ],
   "baker-female": [
-    "אופה",
-    "קונדיטורית"
+    "אופה"
   ],
   "mover-male": [
-    "מוביל",
-    "סבל",
-    "מעביר"
+    "מוביל"
   ],
   "mover-female": [
-    "מעבירה",
-    "סבלית",
     "מובילה"
   ],
   "lawyer-male": [
@@ -148,34 +132,22 @@
     "מורה"
   ],
   "auditor-male": [
-    "שומע חופשי",
-    "מבקר",
-    "מאזין"
+    "מבקר"
   ],
   "auditor-female": [
-    "שומעת חופשית",
-    "מאזינה",
     "מבקרת"
   ],
   "assistant-male": [
-    "עוזר אישי",
     "עוזר"
   ],
   "assistant-female": [
-    "עוזרת אישית",
     "עוזרת"
   ],
   "clerk-male": [
-    "פקיד",
-    "לבלר",
-    "מוכר",
-    "זבן"
+    "פקיד"
   ],
   "clerk-female": [
-    "מוכרת",
-    "לבלרית",
-    "פקידה",
-    "זבנית"
+    "פקידה"
   ],
   "laborer-male": [
     "פועל",
@@ -192,52 +164,36 @@
     "עורכת"
   ],
   "CEO-male": [
-    "מנכ\"ל",
-    "מנהל"
+    "מנכ\"ל"
   ],
   "CEO-female": [
-    "מנכ\"ל",
-    "מנכ\"לית",
-    "מנהלת"
+    "מנכ\"לית"
   ],
   "nurse-male": [
-    "אח רחמן",
     "אח"
   ],
   "nurse-female": [
-    "אחות רחמניה",
     "אחות"
   ],
   "housekeeper-male": [
     "עקר בית",
-    "מנהל משק בית",
-    "אחראי משק בית",
-    "עוזר"
+    "עקר הבית"
   ],
   "housekeeper-female": [
-    "אחראית משק בית",
-    "מנהלת משק בית",
     "עקרת בית",
-    "עוזרת"
+    "עקרת הבית"
   ],
   "chief-male": [
-    "מנהיג השבט",
-    "צ'יף",
-    "מפקד",
-    "מפקח"
+    "מפקד"
   ],
   "chief-female": [
-    "מפקדת",
-    "מפקחת",
-    "מנהיגת השבט"
+    "מפקדת"
   ],
   "cook-male": [
-    "טבח",
-    "בשלן"
+    "טבח"
   ],
   "cook-female": [
-    "טבחית",
-    "בשלנית"
+    "טבחית"
   ],
   "cashier-male": [
     "קופאי"
@@ -246,21 +202,15 @@
     "קופאית"
   ],
   "sheriff-male": [
-    "שריף",
-    "מפקד"
+    "שריף"
   ],
   "sheriff-female": [
-    "שריף",
-    "מפקדת"
+    "שריף"
   ],
   "analyst-male": [
-    "אנליסט",
-    "אנליטיקאי",
-    "מנתח"
+    "אנליסט"
   ],
   "analyst-female": [
-    "אנליטיקאית",
-    "מנתחת",
     "אנליסטית"
   ],
   "secretary-male": [
@@ -270,58 +220,49 @@
     "מזכירה"
   ],
   "construction worker-male": [
-    "עובד בנייה",
-    "שיפוצניק",
-    "פועל בנין",
-    "בנאי",
-    "עובד בניין"
+    "פועל בניין",
+    "פועל הבניין",
+    "עובד בניין",
+    "עובד הבניין"
   ],
   "construction worker-female": [
-    "בנאית",
+    "פועלת בניין",
+    "פועלת הבניין",
     "עובדת בניין",
-    "פועלת בנין",
-    "עובדת בנייה"
+    "עובדת הבניין"
   ],
   "mechanic-male": [
-    "מכונאי",
-    "מוסכניק"
+    "מכונאי"
   ],
   "mechanic-female": [
-    "מכונאית",
-    "מוסכניקית"
+    "מכונאית"
   ],
   "manager-male": [
-    "אחראי משמרת",
-    "בוס",
     "מנהל"
   ],
   "manager-female": [
-    "בוסית",
-    "אחראית משמרת",
     "מנהלת"
   ],
   "receptionist-male": [
     "פקיד קבלה",
-    "מזכיר"
+    "פקיד הקבלה"
   ],
   "receptionist-female": [
     "פקידת קבלה",
-    "מזכירה"
+    "פקידת הקבלה"
   ],
   "tailor-male": [
-    "תופר",
-    "חייט"
+    "חייט",
+    "תופר"
   ],
   "tailor-female": [
-    "תופרת",
-    "חייטת"
+    "חייטת",
+    "תופרת"
   ],
   "attendant-male": [
-    "מטפל",
-    "דייל"
+    "מטפל"
   ],
   "attendant-female": [
-    "מטפלת",
-    "דייל"
+    "מטפלת"
   ]
 }
